Fix Design, Bottom gap added

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  margin-bottom: 50px;
 }
 
 .movie-wrapper {
